fix letter alignment for small devices
and side nav text editing + picture editing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,27 +13,20 @@ body {
 div {
     font-family: ReemKufi-Regular;
 }
-
-
+span#name {
+    padding-bottom: 5%;
+}
 h1#welcome-text {
     text-align: left;
-    font-size: 17px;
+    font-size: 16px;
     padding-right: 7%;
     padding-left: 10%;
     color: grey;
 }
 
-p#welcome-par {
-    text-align: left;
-    font-size: 15px;
-    padding-right: 7%;
-    padding-left: 10%;
-    color: grey;   
-}
-
 h2#body_title {
     text-align: center;
-    font-size: 300px;
+    font-size: 250px;
     padding-top: 10%;
     padding-bottom: 10%;
     padding-right: 2%;
@@ -46,7 +39,6 @@ h3#facebook {
     padding-bottom: 2%;
     padding-right: 7%;
     padding-left: 10%;
-    padding-top: 30%;
     color: grey;
 }
 
